--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,5 +1,5 @@
 .section-1 {
-  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/image/dfff.jpg");
+  background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/image/bg1.jpg");
   background-position: 50% 50%;
   min-height: 600px;
 }
